--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,6 @@
 body {
   margin: 0;
   height: 100%;
-  background: linear-gradient(30deg, 825cf2, 5c75f1);
-  background-size: 100%;
-
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  background-size: cover;
 
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -22,13 +16,10 @@ code {
 
 .NavBar {
   list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: rgba(39, 87, 87, 0.5);
-  background-size: 100%;
+  margin-top: 0;
 
-  z-index: 10;
+  overflow: hidden;
+
   position: fixed;
   top: 0;
   height: 50px;
@@ -75,4 +66,14 @@ code {
 
 .home a:hover {
   opacity: 1;
+}
+
+.Head {
+  background: linear-gradient(30deg, #825cf2, #5c75f1);
+  position: fixed;
+  margin-top: 50px;
+  list-style-type: none;
+
+  height: 100%;
+  width: 100%;
 }
