--- a/Portal/src/App.css
+++ b/Portal/src/App.css
@@ -1,104 +1,98 @@
-.page-content {
-  background: linear-gradient(30deg, #825cf2, #5c75f1);
-  height: 100%;
-  width: 100%;
-}
-
 .app {
-  background: linear-gradient(30deg, #825cf2, #5c75f1);
-  height: 100%;
+    background: linear-gradient(30deg, #825cf2, #5c75f1);
+    height: 100%;
 
-  padding-left: 50px;
-  padding-right: 50px;
+    padding-left: 50px;
+    padding-right: 50px;
 }
 
 .Head {
-  margin: 0;
-  padding: 0;
-  position: fixed;
-  display: grid;
-  grid-template-areas:
-    "no no no"
-    "nav nav nav"
-    "middl middl middl";
-  grid-template-rows: 60px 60px 1fr;
-  grid-template-columns: 100px 1fr 100px;
-  background: linear-gradient(30deg, #825cf2, #5c75f1);
-  height: 100%;
-  width: 100%;
-  /*margin-top: 50px;*/
+    margin: 0;
+    padding: 0;
+    position: fixed;
+    display: grid;
+    grid-template-areas:
+        'no no no'
+        'nav nav nav'
+        'middl middl middl';
+    grid-template-rows: 60px 60px 1fr;
+    grid-template-columns: 100px 1fr 100px;
+    background: linear-gradient(30deg, #825cf2, #5c75f1);
+    height: 100%;
+    width: 100%;
+    /*margin-top: 50px;*/
 }
 
 .NavBar {
-  margin-right: 200px;
-  margin-left: 200px;
-  margin-top: 0;
-  padding: 0;
-  grid-area: nav;
-  list-style-type: none;
+    margin-right: 200px;
+    margin-left: 200px;
+    margin-top: 0;
+    padding: 0;
+    grid-area: nav;
+    list-style-type: none;
 }
 
 .Login {
-  width: 120px;
+    width: 120px;
 }
 .Contact {
-  width: 120px;
+    width: 120px;
 }
 
 .How {
-  width: 200px;
+    width: 200px;
 }
 
 .NavBar li {
-  float: right;
+    float: right;
 }
 
 .NavBar li a {
-  display: block;
-  color: white;
-  text-align: center;
-  height: 120px;
+    display: block;
+    color: white;
+    text-align: center;
+    height: 120px;
 
-  font-size: 150%;
-  text-decoration: none;
-  list-style-type: none;
+    font-size: 150%;
+    text-decoration: none;
+    list-style-type: none;
 }
 
 .Logo {
-  grid-area: logo;
+    grid-area: logo;
 }
 
 .Middle {
-  grid-area: middl;
-  margin-right: 200px;
-  margin-left: 200px;
-  margin-top: 0;
-  padding: 0;
-  background-image: url("./main.png");
-  background-size: 100%;
-  background-repeat: no-repeat;
-  list-style-type: none;
+    grid-area: middl;
+    margin-right: 200px;
+    margin-left: 200px;
+    margin-top: 0;
+    padding: 0;
+    background-image: url('./main.png');
+    background-size: 100%;
+    background-repeat: no-repeat;
+    list-style-type: none;
 }
 
 .home {
-  float: left;
+    float: left;
 }
 
 .home a {
-  display: block;
-  color: white;
-  text-align: center;
-  height: 100px;
-  width: 200px;
-  padding: 0;
-  margin: 0;
-  text-decoration: none;
-  background-image: url("./Kotiki.png");
-  background-size: 100%;
-  background-repeat: no-repeat;
-  opacity: 0.7;
+    display: block;
+    color: white;
+    text-align: center;
+    height: 100px;
+    width: 200px;
+    padding: 0;
+    margin: 0;
+    text-decoration: none;
+    background-image: url('./Kotiki.png');
+    background-size: 100%;
+    background-repeat: no-repeat;
+    opacity: 0.7;
 }
 
 .home a:hover {
-  opacity: 1;
+    opacity: 1;
 }
