--- a/Portal/src/Pages/Auth/AuthPage.scss
+++ b/Portal/src/Pages/Auth/AuthPage.scss
@@ -1,8 +1,68 @@
-.auth-page{
-    background: linear-gradient(30deg, 825CF2, 5C75F1);
-
+.auth-page {
+    background: linear-gradient(30deg, #825cf2, #5c75f1);
+    height: 100vh;
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
     align-items: center;
+
+    &__form {
+        width: 50%;
+        margin-left: auto;
+        margin-right: auto;
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    &__title {
+        margin-bottom: 40px;
+
+        font-family: 'Montserrat Alternates', sans-serif;
+        font-weight: 800;
+        letter-spacing: 4px;
+        color: white;
+        font-size: 90px;
+    }
+
+    input {
+        border-radius: 15px;
+        border: 3px solid white;
+
+        width: 60%;
+        min-height: 30px;
+        outline: none;
+        text-align: center;
+        background-color: transparent;
+
+        margin-bottom: 20px;
+
+        &:focus {
+            outline: none;
+        }
+
+        &::placeholder {
+            color: white;
+        }
+    }
+
+    &__button {
+        background-color: transparent;
+        cursor: pointer;
+
+        text-align: center;
+
+        width: 60%;
+        min-height: 30px;
+
+        border-radius: 15px;
+        border: 3px solid white;
+
+        color: #fff;
+
+        -webkit-transition: all 150ms ease-in-out;
+        transition: all 150ms ease-in-out;
+
+        &:hover {
+        }
+    }
 }
