Add auth toggler.

--- a/Portal/src/Pages/Auth/AuthPage.scss
+++ b/Portal/src/Pages/Auth/AuthPage.scss
@@ -1,3 +1,19 @@
+@mixin font-input {
+    font-family: 'Montserrat Alternates', sans-serif;
+    font-weight: 400;
+
+    color: white;
+    font-size: 15px;
+}
+
+@mixin font-title {
+    font-family: 'Montserrat Alternates', sans-serif;
+    font-weight: 800;
+    letter-spacing: 4px;
+    color: white;
+    font-size: 90px;
+}
+
 .auth-page {
     background: linear-gradient(30deg, #825cf2, #5c75f1);
     height: 100vh;
@@ -17,16 +33,14 @@
     &__title {
         margin-bottom: 40px;
 
-        font-family: 'Montserrat Alternates', sans-serif;
-        font-weight: 800;
-        letter-spacing: 4px;
-        color: white;
-        font-size: 90px;
+        @include font-title();
     }
 
     input {
         border-radius: 15px;
         border: 3px solid white;
+
+        @include font-input();
 
         width: 60%;
         min-height: 30px;
@@ -49,8 +63,6 @@
         background-color: transparent;
         cursor: pointer;
 
-        text-align: center;
-
         width: 60%;
         min-height: 30px;
 
@@ -58,11 +70,25 @@
         border: 3px solid white;
 
         color: #fff;
+        @include font-input();
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
 
         -webkit-transition: all 150ms ease-in-out;
         transition: all 150ms ease-in-out;
 
         &:hover {
+        }
+
+        margin-bottom: 5px;
+    }
+
+    &__toggler {
+        @include font-input();
+
+        span {
+            cursor: pointer;
         }
     }
 }
