--- a/Portal/src/index.css
+++ b/Portal/src/index.css
@@ -1,79 +1,28 @@
 body {
-  margin: 0;
-  height: 100%;
+    margin: 0;
+    height: 100%;
 
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+        'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
+        'Helvetica Neue', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+        monospace;
 }
 
-.NavBar {
-  list-style-type: none;
-  margin-top: 0;
-
-  overflow: hidden;
-
-  position: fixed;
-  top: 0;
-  height: 50px;
-  width: 100%;
+* {
+    margin: 0;
+    padding: 0;
 }
 
-.NavBar li {
-  float: right;
+ul {
+    list-style-type: none;
 }
 
-.NavBar li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  background-color: rgba(0, 0, 0, 0.5);
-}
-
-.NavBar li a:hover {
-  background-color: rgb(0, 0, 0);
-  opacity: 1;
-}
-
-.home {
-  float: left;
-}
-
-.home a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding-top: 40px;
-  padding-left: 40px;
-  padding-bottom: 40px;
-  padding-right: 30px;
-  margin-left: 30px;
-  text-decoration: none;
-  background-color: aqua;
-  background-size: 80%;
-  background-repeat: no-repeat;
-  opacity: 0.7;
-}
-
-.home a:hover {
-  opacity: 1;
-}
-
-.Head {
-  background: linear-gradient(30deg, #825cf2, #5c75f1);
-  position: fixed;
-  margin-top: 50px;
-  list-style-type: none;
-
-  height: 100%;
-  width: 100%;
+a {
+    text-decoration: none;
 }
